<resources>
    <string-array name="spinner_options">
        <item>Announcements</item>
        <item>Events</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="app_name">Demo Application</string>
    <string name="login_page_text">login_student</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">signup_button</string>
    <string name="previous">previous</string>
    <string name="hello_first_fragment">hello</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="click_to_register">Register Now</string>
    <string name="click_to_login">Login Now</string>
    <string name="utorID">UTORid</string>
    <string name="admin_welcome">Welcome Admin!</string>
    <string name="announcements">View Announcements</string>
    <string name="events">Announce Event</string>
    <string name="complaints">View Complaints</string>
    <string name="submit_complaint">Submit a Complaint</string>
    <string name="post">Post Checker</string>
    <string name="notifications">View Events and Announcements</string>
    <string name="registerevent">RSVP for an Event</string>
    <string name="eventrating">Submit a Review for an Event</string>
    <string name="post_checker">POSt Checker</string>
    <string name="announcedate">Announcedate</string>
    <string name="post_announcement">Post</string>
    <string name="announcement_date">announcement date</string>
    <string name="announcement">Announcement</string>
    <string name="admin_id">Admin ID</string>
    <string name="notification_board">Notification Board</string>
    <string name="comment">Comment</string>
    <string name="rsvp">RSVP</string>
    <string name="event_location">Event Location</string>
    <string name="event_time">Event Time</string>
    <string name="event_date">Event Date</string>
    <string name="event_name">Event Name</string>
    <string name="announce">Announce</string>
    <string name="admin_page">Admin Page</string>
    <string name="type_a_subject_for_your_complaint">Type a subject for your complaint</string>
    <string name="body_of_complaint">Body of Complaint</string>
    <string name="view_registered_events">View Registered Events</string>
    <string name="student_page">Student Page</string>
    <string name="view_events">View Events</string>
    <string name="make_announcement">Make Announcement</string>
    <string name="back">back</string>
    <string name="event_name1">Event Name</string>
    <string name="date_mm_dd_yy">Date (MM/DD/YY)</string>
    <string name="time_please_specify_am_pm">Time (Please specify AM/PM)</string>
    <string name="location">Location</string>
    <string name="participant_limit">Participant Limit</string>
    <string name="submit">Submit</string>
    <string name="announcement_please_enter_the_announcement">Announcement (Please enter the announcement)</string>
    <string name="programs_available">Programs Available:</string>
    <string name="computer_science">Computer Science</string>
    <string name="minor_in_computer_science">Minor in Computer Science:</string>
    <string name="major_in_computer_science">Major in Computer Science:</string>
    <string name="major_coop_in_computer_science">Major(Coop) in Computer Science:</string>
    <string name="major_coop_in_mathematics">Major(Coop) in Mathematics:</string>
    <string name="major_coop_in_statistics">Major(Coop) in Statistics:</string>
    <string name="major_in_mathematics">Major in Mathematics:</string>
    <string name="major_in_statistics">Major in Statistics:</string>
    <string name="specialist_in_computer_science">Specialist in Computer Science:</string>
    <string name="specialist_coop_in_computer_science">Specialist(Coop) in Computer Science:</string>
    <string name="specialist_coop_in_mathematics">Specialist(Coop) in Mathematics:</string>
    <string name="specialist_coop_in_statistics">Specialist(Coop) in Statistics:</string>
    <string name="specialist_in_mathematics">Specialist in Mathematics:</string>
    <string name="specialist_in_statistics">Specialist in Statistics:</string>
    <string name="mathematics">Mathematics</string>
    <string name="statistics">Statistics</string>
    <string name="enter_csca08_numeric_grade_if_taken">Enter CSCA08 Numeric Grade (if taken)</string>
    <string name="enter_csca20_numeric_grade_if_taken">Enter CSCA20 Numeric Grade (if taken)</string>
    <string name="enter_csca48_numeric_grade_if_taken">Enter CSCA48 Numeric Grade (if taken)</string>
    <string name="enter_csc_mata67_numeric_grade_if_taken">Enter CSC/MATA67 Numeric Grade (if taken)</string>
    <string name="enter_mata31_numeric_grade_if_taken">Enter MATA31 Numeric Grade (if taken)</string>
    <string name="enter_mata37_numeric_grade_if_taken">Enter MATA37 Numeric Grade (if taken)</string>
    <string name="enter_mata22_numeric_grade_if_taken">Enter MATA22 Numeric Grade (if taken)</string>
    <string name="submit_grades">Submit Grades</string>
    <string name="number_of_places_left">Number of places left</string>
    <string name="Enter_Admission_Category">Enter Admission Category</string>
    <string name="AdmissionCategory">Choose your Admission Category</string>
    <string name="Coop_Status">Co-op Status\n</string>
    <string name="Give_feedback">Give Feedback</string>
    <string name="Give_student_comment">Give Feedback</string>
    <string name="Please_type_your_comment_here">student_comments</string>
    <string name="Please_type_your_rating_here">student_rating</string>
    <string name="Student_rating">Student_rating_from10\n</string>
</resources>