<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/CSCA08"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_csca08_numeric_grade_if_taken"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/CSCA20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_csca20_numeric_grade_if_taken"
        android:inputType="text"
        android:minHeight="48dp"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/CSCA48"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_csca48_numeric_grade_if_taken"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/CSCA67"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_csc_mata67_numeric_grade_if_taken"
        android:inputType="text"
        android:minHeight="48dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/MATA31"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_mata31_numeric_grade_if_taken"
        android:inputType="text"
        android:minHeight="48dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/MATA37"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_mata37_numeric_grade_if_taken"
        android:inputType="text"
        android:minHeight="48dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/MATA22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_mata22_numeric_grade_if_taken"
        android:inputType="text"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/Submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_grades"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>
