<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_page"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/post"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/post" />

    <Button
        android:id="@+id/SubmitComplaintBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/submit_complaint"
        android:onClick="OnSubmitComClick"/>

    <Button
        android:id="@+id/notifications"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onViewNotificationClick"
        android:text="@string/notifications"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/ViewRegisteredEvent"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/view_registered_events"
        android:onClick="onViewRegisteredClick"/>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/logout"
        android:onClick="OnLogoutClick"/>

</LinearLayout>
