<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminAnnounce">

    <EditText
        android:id="@+id/editAnnounceDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/date_mm_dd_yy"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="TextFields,VisualLintTextFieldSize"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editAnnounceContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editAnnounceDate"
        android:layout_marginTop="16dp"
        android:hint="@string/announcement_please_enter_the_announcement"
        android:inputType="text"
        android:minHeight="48dp"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/MakeAnnounce"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editAnnounceContent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="150dp"
        android:text="@string/post_announcement" />

    <Button
        android:id="@+id/back_button2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MakeAnnounce"
        android:layout_marginStart="156dp"
        android:text="@string/back"
        android:onClick="OnBackBtn4Click"/>

</RelativeLayout>